--- a/clasesFran2.0/header.html
+++ b/clasesFran2.0/header.html
@@ -11,7 +11,7 @@
 </head>
 <header>
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: rgba(255,255,255,1);"><!--fixed-top fija arriba la barra-->
-		<a class="navbar-brand" href="Index.html"><img src="img/logolavamad3.jpg" style="width: 200px;"></a>
+		<a class="navbar-brand" href="Index.php"><img src="img/logolavamad3.jpg" style="width: 200px;"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
