Actualización al sitio
Creación de ofertas y promos y mejora del index

--- a/clasesFran2.0/header.html
+++ b/clasesFran2.0/header.html
@@ -10,9 +10,9 @@
 	<link  rel = "icon"  href = "img/logo.ico/favicon.ico"  type = "image / x-icon" >
 </head>
 <header>
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: rgba(255,255,255,1);"><!--fixed-top fija arriba la barra-->
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(255,255,255,1); border-radius: 0px 0px 30px 30px;"><!--fixed-top fija arriba la barra-->
 		<a class="navbar-brand" href="Index.php"><img src="img/logolavamad3.jpg" style="width: 200px;"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarColor03">
@@ -27,7 +27,7 @@
         <a class="nav-link" href="#" style="font-family: Lucida Calligraphy;">Información<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#" style="font-family: Lucida Calligraphy;">Botón Extra 1<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="promos.php" style="font-family: Lucida Calligraphy;">Promociones<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#" style="font-family: Lucida Calligraphy;">Botón Extra 2<span class="sr-only">(current)</span></a>
