--- a/clasesFran2.0/footer.html
+++ b/clasesFran2.0/footer.html
@@ -1,3 +1,3 @@
-<footer id="footer" style="text-align:center;background-color: rgba(255,255,255,.3);" class="fixed-bottom">
-	<li><a href="https://www.facebook.com/lavamadlavanderia/"><img src="img/aiconf.svg" alt="insertar SVG con la etiqueta image" width="50px"><span class="label"> &copy; Lavandería Lavamad</span></a></li>
+<footer id="footer" style="text-align:center;background-image: url(img/fondo.jpg); border-radius: 30px 30px 0px 0px ; opacity: 0.85; filter: alpha(opacity=85);" class="fixed-bottom" >
+	<li><a href="https://www.facebook.com/lavamadlavanderia/"><img src="img/aiconf.svg" alt="insertar SVG con la etiqueta image" width="24px"><span class="label"> &copy; Lavandería Lavamad</span></a></li>
 </footer>
