--- a/clasesFran2.0/header.html
+++ b/clasesFran2.0/header.html
@@ -18,10 +18,10 @@
   <div class="collapse navbar-collapse" id="navbarColor03">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#" style="font-family: Lucida Calligraphy; color:rgba();">Registrarse<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="register.php" style="font-family: Lucida Calligraphy; color:rgba();">Registrarse<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#" style="font-family: Lucida Calligraphy;">Iniciar Sesión<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="login.php" style="font-family: Lucida Calligraphy;">Iniciar Sesión<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#" style="font-family: Lucida Calligraphy;">Información<span class="sr-only">(current)</span></a>
